feat: balance and account service
